--- a/ios/.gitignore
+++ b/ios/.gitignore
@@ -23,9 +23,12 @@ Flutter/ephemeral/
 Flutter/app.flx
 Flutter/app.zip
 Flutter/flutter_assets/
+firebase_app_id_file.json
+
 Flutter/flutter_export_environment.sh
 ServiceDefinitions.json
 Runner/GeneratedPluginRegistrant.*
+Runner/GoogleService-info.plist
 
 # Exceptions to above rules.
 !default.mode1v3
