--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^2.19.0
   firebase_auth: ^4.11.1
+  http: ^1.1.0
+  cloud_firestore: ^4.12.0
 
 dev_dependencies:
   flutter_test:
